--- a/index.html
+++ b/index.html
@@ -1,15 +1,21 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Personal</title>
-  </head>
-
-  <body>
-    <h1>Personal Site</h1>
-    <p>Skills</p>
-    <ul>
-      <li>Agile</li>
-      <li>Quality Assurance</li>
-    </ul>
-  </body>
+    <style>
+        body {
+            font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif
+        }
+    </style>
+<head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Reset</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
+    <script src="main.js"></script>
+</head>
+<body>
+    <h1>Learn how to change styles in a flash!! </h1>
+    <p>This is testing reset.css</p>
+    
+</body>
 </html>
